--- a/{{ cookiecutter.repo_name }}/requirements.txt
+++ b/{{ cookiecutter.repo_name }}/requirements.txt
@@ -8,10 +8,7 @@ coverage
 flake8
 python-dotenv>=0.5.1
 pandas
-geopandas
 numpy
-
-git+https://github.com/jancgreyling/mypackages.git
 
 matplotlib
 seaborn
@@ -21,6 +18,11 @@ plotnine
 shapely
 
 geopandas
+scikit-learn
+metpy
+rasterio
+
+git+https://github.com/jancgreyling/mypackages.git
 
 {% if cookiecutter.python_interpreter != 'python3' %}
 
