--- a/{{ cookiecutter.repo_name }}/requirements.txt
+++ b/{{ cookiecutter.repo_name }}/requirements.txt
@@ -9,6 +9,7 @@ flake8
 python-dotenv>=0.5.1
 pandas
 numpy
+pyarrow
 
 matplotlib
 seaborn
@@ -17,10 +18,11 @@ plotly
 plotnine
 shapely
 
-geopandas
 scikit-learn
-metpy
+
+geopandas
 rasterio
+metpy
 
 git+https://github.com/jancgreyling/mypackages.git
 
