--- a/{{ cookiecutter.repo_name }}/requirements.txt
+++ b/{{ cookiecutter.repo_name }}/requirements.txt
@@ -9,23 +9,17 @@ flake8
 python-dotenv>=0.5.1
 pandas
 numpy
-pyarrow
 
 matplotlib
 seaborn
-openpyxl
 plotly
-plotnine
 shapely
 
-scikit-learn
+pydantic_settings
 
-geopandas
-rasterio
-metpy
-mapclassify
+dotenv
+pathlib
 
-git+https://github.com/jancgreyling/mypackages.git
 
 {% if cookiecutter.python_interpreter != 'python3' %}
 
