--- a/{{ cookiecutter.repo_name }}/requirements.txt
+++ b/{{ cookiecutter.repo_name }}/requirements.txt
@@ -1,12 +1,4 @@
-# local package
--e .
 
-# external requirements
-click
-Sphinx
-coverage
-flake8
-python-dotenv>=0.5.1
 pandas
 numpy
 
@@ -17,7 +9,7 @@ shapely
 
 pydantic_settings
 
-dotenv
+dotenv-python
 pathlib
 
 
